[package]
name = "lfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking"]}
quick-xml = {version = "0.28", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"] }
