[package]
name = "lfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking"]}
quick-xml = {version = "0.28", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"] }
constcat = "0.3.0"
const_format = "0.2.31"
regex = "1.9.1"
lazy_static = "1.4.0"
